2002-04-27  Zoran Vasiljevic <zoran@archiware.com>  

	* generic/threadCmd.c: fixed processing of -eventmark. We now
	properly wait for target thread to catch up with processing events.

2002-04-07  Zoran Vasiljevic <zoran@archiware.com>  

	* generic/threadCmd.c: added call to Ns_TclMarkForDelete(interp)
	when compiled for AOLserver support, otherwise we were leaking std
	channels on thread exit.

2002-04-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: improved use of DESTDIR in install targets.
	Removed need for installdirs target.
	Broke TCLSH_PROG into TCLSH_ENV and TCLSH_PROG with TCLSH var and
	added comments about TCLSH_ENV.
	Added default shell and gdb targets.

	* configure: 
	* configure.in: updated to new TEA base that: prefixes all macros
	with TEA_* instead of SC_*; adds TEA_PREFIX, which defaults the
	prefix and exec_prefix values to what Tcl used; adds
	TEA_SETUP_COMPILER, which handles basic compiler / support program
	checks and simplifies the configure.in.  Turn on --enable-threads
	by default and do sanity checking as well.

2002-04-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in (install-lib-binaries): ensure that binary files are
	installed with executable bit set (use INSTALL_PROGRAM)

2002-03-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure:
	* configure.in: BUILD_${PACKAGE} had to be static BUILD_thread in
	AC_DEFINE because autoconf wasn't substituting ${PACKAGE}.

2002-03-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in (TCLSH_PROG): moved and updated env var definitions
	to have tclsh work from build dir.  Removed TCL_EXTRA_CFLAGS,
	TCL_LD_FLAGS, TCL_SHLIB_LD_LIBS, TCL_DBGX, TCL_STUB_LIB_FILE,
	TCL_STUB_LIB_SPEC as they aren't needed (configure acquires all
	that info for us).  TCL_LIBS is also not needed, but left in as a
	reference to the libs Tcl used.

	* configure: regen based on updated tclconfig/tcl.m4
	* configure.in: moved the SHLIB_LD_LIBS magic into